--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   
-<head>
-<title>CYBERJUSTICE</title>
-</head>
+  <head>
+    
+    <title>CYBERJUSTICE</title>
+    
+  </head>
   
-<body>
+  <body>
 
-<h1>CYBERJUSTICE</h1>
-<p>The cyberpunk VN-RPG.</p>
+    <h1>CYBERJUSTICE</h1>
+    <p>The cyberpunk VN-RPG.</p>
+    <img src="template_logo.png" alt="CYBERJUSTICE" width="400" height="85">
+    <hr>
+    <a href="https://cyberjustice.github.io/main/">Back to main</a>
+    <hr>
+    <h2>The Developers of CYBERJUSTICE</h2>
+    <br />
+    <h3>Ithiro Sumi</h3>
+    <p>*rap about Ithiro Sumi*.</p>
+    <h3>WunderBlunder</h3>
+    <p>*rap about WunderBlunder*.</p>
+    <h3>Lucas Bressan</h3>
+    <p>*rap about Lucas Bressan*.</p>
+    <h3>Gabo Terrazas</h3>
+    <p>*sad rap about Gabo Terrazas*.</p>
 
-<a href="https://cyberjustice.github.io/main/">Back to main</a>
-  
-<h2>The Developers of CYBERJUSTICE</h2>
-
-<h3>Ithiro Sumi</h3>
-<p>*rap about Ithiro Sumi*.</p>
-
-<h3>WunderBlunder</h3>
-<p>*rap about WunderBlunder*.</p>
-
-<h3>Lucas Bressan</h3>
-<p>*rap about Lucas Bressan*.</p>
-
-<h3>Gabo Terrazas</h3>
-<p>*sad rap about Gabo Terrazas*.</p>
-
-</body>
+  </body>
   
 </html>
