--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <br />
     <h3>Ithiro Sumi</h3>
     <p>*rap about Ithiro Sumi*.</p>
-    <h3>WunderBlunder</h3>
-    <p>*rap about WunderBlunder*.</p>
-    <h3>Lucas Bressan</h3>
-    <p>*rap about Lucas Bressan*.</p>
+    <h3>Wunder_Blunder</h3>
+    <p>*rap about Wunder_Blunder*.</p>
+    <h3>Gekko</h3>
+    <p>*rap about Gekko*.</p>
     <h3>Gabo Terrazas</h3>
     <p>*sad rap about Gabo Terrazas*.</p>
 
